<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="18dp"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/filter_begin_date"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"

            android:textSize="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etDatePicker"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:selectAllOnFocus="false"
            android:textIsSelectable="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/filter_sort_order"
            android:id="@+id/textView3"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:textSize="15dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerSort"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/filter_favorite"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:textSize="15dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Arts"
            android:id="@+id/cbArts"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4"
            android:checked="false"
            android:layout_marginLeft="10dp"
            android:nestedScrollingEnabled="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fashion &amp; Style"
            android:id="@+id/cbFashion"
            android:layout_below="@+id/cbArts"
            android:layout_alignLeft="@+id/cbArts"
            android:layout_alignStart="@+id/cbArts"
            android:checked="false"
            android:nestedScrollingEnabled="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sports"
            android:id="@+id/cbSports"
            android:layout_below="@+id/cbFashion"
            android:layout_alignLeft="@+id/cbFashion"
            android:layout_alignStart="@+id/cbFashion"
            android:checked="false"
            android:nestedScrollingEnabled="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="More: "
            android:id="@+id/cbMore"
            android:layout_below="@+id/cbSports"
            android:layout_alignLeft="@+id/cbSports"
            android:layout_alignStart="@+id/cbSports"
            android:checked="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtMore"
            android:layout_below="@+id/cbMore"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/cbMore"
            android:layout_alignStart="@+id/cbMore"
            android:visibility="invisible" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtMore"
            android:layout_alignRight="@+id/edtMore"
            android:layout_alignEnd="@+id/edtMore">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btnCancel"
                android:layout_below="@+id/edtMore"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_toStartOf="@+id/edtMore"
                android:layout_toLeftOf="@+id/edtMore"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/btnSave"
                android:nestedScrollingEnabled="false"
                android:layout_below="@+id/edtMore"
                android:layout_toRightOf="@+id/textView4"
                android:layout_alignRight="@+id/edtMore"
                android:layout_alignEnd="@+id/edtMore"
                android:layout_weight="1" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>